--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,23 @@
 // Navigation Styles here
+header {
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 2px dashed @navigation-border;
+    margin: 20px auto 0;
+    padding-bottom: 20px;
+    width: 85%;
+    max-width: 1000px;
+
+    nav {
+        width: 300px;
+        display: flex;
+        justify-content: space-around;
+        
+        a {
+            padding: 10px;
+            font-size: 1.3rem;
+            text-decoration: none;
+            color: black;
+        }
+    }
+}
