--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,3 +2,17 @@
 .flex-border {
     border: 1px solid red;
 }
+
+.divide-border {
+    border-bottom: 2px dashed @navigation-border;
+}
+
+.btn-style(@btn-pad, @txt-size) {
+    color: @white;
+    background-color: @eastern-blue;
+    border-radius: 8px;
+    padding: @btn-pad;
+    font-size: @txt-size;
+    text-align: center;
+    width: 80%;
+} 
