--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,7 @@
 header {
     display: flex;
     justify-content: space-around;
-    border-bottom: 2px dashed @navigation-border;
+    .divide-border();
     margin: 20px auto 0;
     padding-bottom: 20px;
     width: 85%;
