--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,10 @@
 .home {
 
+  article div {
+    padding: 20px 0;
+    .divide-border();
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -56,6 +61,10 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+    }
+
+    .btn {
+      .btn-style (10px, 1.5rem);
     }
   }
 }// home
