--- a/css/index.css
+++ b/css/index.css
@@ -142,6 +142,13 @@ html,
 body {
   font-family: 'Roboto', sans-serif;
 }
+@media (max-width: 500px) {
+  html,
+  body {
+    width: 95%;
+    margin: 0 auto;
+  }
+}
 h1,
 h2,
 h3,
@@ -174,6 +181,11 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    width: 95%;
+  }
+}
 header {
   display: flex;
   justify-content: space-around;
@@ -183,14 +195,27 @@ header {
   width: 85%;
   max-width: 1000px;
 }
+@media (max-width: 500px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 0;
+    width: 100%;
+  }
+}
 header nav {
   width: 300px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+@media (max-width: 500px) {
+  header nav {
+    width: 100%;
+  }
 }
 header nav a {
   padding: 10px;
-  font-size: 1.3rem;
+  font-size: 1.6rem;
   text-decoration: none;
   color: black;
 }
@@ -215,13 +240,33 @@ header nav a {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-section {
+    flex-direction: column;
+  }
+  .home .content-section .boat-dock {
+    order: 9;
+  }
+}
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+    padding: 0;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding: 0;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -242,6 +287,11 @@ header nav a {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
@@ -251,9 +301,20 @@ header nav a {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-direction: column;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+    margin: 0 auto 30px;
+  }
 }
 .home .content-pick .btn {
   color: #FFFFFF;
@@ -263,4 +324,9 @@ header nav a {
   font-size: 1.5rem;
   text-align: center;
   width: 80%;
+}
+@media (max-width: 500px) {
+  .home .content-pick .btn {
+    width: 100%;
+  }
 }
