--- a/less/global.less
+++ b/less/global.less
@@ -8,6 +8,11 @@ html {
 
 html, body {
   font-family: 'Roboto', sans-serif;
+
+  @media @mobile {
+    width: 95%;
+    margin: 0 auto;
+  }
 }
 
 h1, h2, h3, h4, h5 {
@@ -43,4 +48,8 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+
+  @media @mobile {
+    width: 95%;
+  }
 }
