--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,14 +8,25 @@ header {
     width: 85%;
     max-width: 1000px;
 
+    @media @mobile {
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 0;
+        width: 100%;
+    }
+
     nav {
         width: 300px;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
+
+        @media @mobile {
+            width: 100%;
+        }
         
         a {
             padding: 10px;
-            font-size: 1.3rem;
+            font-size: 1.6rem;
             text-decoration: none;
             color: black;
         }
