--- a/less/mixins.less
+++ b/less/mixins.less
@@ -16,3 +16,8 @@
     text-align: center;
     width: 80%;
 } 
+
+.call-animation(@name, @dur) {
+    animation-name: @name;
+    animation-duration: @dur;
+}
