--- a/less/variables.less
+++ b/less/variables.less
@@ -15,3 +15,9 @@
 
 // Media Queries
 @mobile: ~"(max-width: 500px)";
+
+// Animation keyframes
+@keyframes color-fade {
+    to {background-color: @eastern-blue;
+    }
+}
