--- a/less/navigation.less
+++ b/less/navigation.less
@@ -16,19 +16,24 @@ header {
     }
 
     nav {
-        width: 300px;
+        width: 400px;
         display: flex;
         justify-content: space-between;
-
+        
         @media @mobile {
             width: 100%;
         }
         
         a {
-            padding: 10px;
+            padding: 10px 20px;
             font-size: 1.6rem;
             text-decoration: none;
             color: black;
+            border-radius: 3px;
+        }
+
+        a:hover {
+            .call-animation(color-fade, 1s);
         }
     }
 }
