did one more stretch goal

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,14 +7,14 @@
     border-bottom: 2px dashed @navigation-border;
 }
 
-.btn-style(@btn-pad, @txt-size) {
+.btn-style(@wide) {
     color: @white;
     background-color: @eastern-blue;
     border-radius: 8px;
-    padding: @btn-pad;
-    font-size: @txt-size;
+    padding: 10px;
+    font-size: 1.5rem;
     text-align: center;
-    width: 80%;
+    width: @wide;
 } 
 
 .call-animation(@name, @dur) {
