--- a/css/index.css
+++ b/css/index.css
@@ -310,6 +310,7 @@ header nav a:hover {
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
+  border-bottom: 2px dashed #C0C0C0;
 }
 @media (max-width: 500px) {
   .home .content-pick {
@@ -339,4 +340,54 @@ header nav a:hover {
   .home .content-pick .btn {
     width: 100%;
   }
+}
+.home .input-section {
+  padding: 25px 0;
+}
+.home .input-section .user-input {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+@media (max-width: 500px) {
+  .home .input-section .user-input {
+    flex-direction: column;
+  }
+}
+.home .input-section button {
+  color: #FFFFFF;
+  background-color: #17A2B8;
+  border-radius: 8px;
+  padding: 10px;
+  font-size: 1.5rem;
+  text-align: center;
+  width: 20%;
+  display: block;
+  margin: 40px auto 20px;
+}
+.home .input-section .vac-type {
+  font-size: 1.5rem;
+}
+.home .input-section .vac-type h3 {
+  font-size: 1.8rem;
+  margin-bottom: 20px;
+}
+.home .input-section .vac-type input {
+  margin: 10px;
+}
+.home .input-section .vac-type select {
+  margin: 30px 0;
+  font-size: 1.5rem;
+  padding: 5px;
+  border-radius: 3px;
+  width: 250px;
+}
+.home .input-section .user-info {
+  font-size: 1.5rem;
+}
+.home .input-section .user-info input {
+  margin: 5px 0 20px;
+  width: 250px;
+  border-radius: 3px;
+  padding: 5px;
 }
