--- a/less/home-page.less
+++ b/less/home-page.less
@@ -77,6 +77,7 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    .divide-border();
 
     @media @mobile {
       flex-direction: column;
@@ -93,10 +94,62 @@
     }
 
     .btn {
-      .btn-style (10px, 1.5rem);
+      .btn-style (80%);
 
       @media @mobile {
         width: 100%;
+      }
+    }
+  }
+
+  .input-section {
+    padding: 25px 0;
+
+    .user-input {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 10px;
+
+      @media @mobile {
+        flex-direction: column;
+      }
+    }
+
+    button {
+      .btn-style (20%);
+      display: block;
+      margin: 40px auto 20px;
+    }
+
+    .vac-type {
+      font-size: 1.5rem;
+
+      h3 {
+        font-size: 1.8rem;
+        margin-bottom: 20px;
+      }
+
+      input {
+        margin: 10px;
+      }
+
+      select {
+        margin: 30px 0;
+        font-size: 1.5rem;
+        padding: 5px;
+        border-radius: 3px;
+        width: 250px;
+      }
+    }
+
+    .user-info {
+      font-size: 1.5rem;
+      
+      input {
+      margin: 5px 0 20px;
+      width: 250px;
+      border-radius: 3px;
+      padding: 5px;
       }
     }
   }
